src/test/ui/error-codes/E0719-trait-alias-object.stderr
error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/E0719-trait-alias-object.rs:16:25
   |
LL | trait I32Iterator = Iterator<Item = i32>;
   |                              ---------- `Item` bound here first
...
LL |     let _: &I32Iterator<Item = u32>; //~ ERROR E0719
   |                         ^^^^^^^^^^ re-bound here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0719`.
